--- a/src/sass/components/collapse.scss
+++ b/src/sass/components/collapse.scss
@@ -2,12 +2,18 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  width: 1023px;
   margin-top: 38px;
   margin-bottom: 38px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: #F6F6F6;
   @media screen and (max-width: 1024px) {
+    width: 100vw;
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;  
   }
 }
 
