--- a/src/sass/components/slideshow.scss
+++ b/src/sass/components/slideshow.scss
@@ -22,7 +22,7 @@
   object-fit: cover;
   @media screen and (max-width: 1024px) {
     width: 90vw;
-    height: auto;
+    height: 70vw;
   }
 }
 
